# dbms_upended

./: .TODO  .gitignore  Cargo.toml  README.md  build.rs
docs/: db_format.hexpat  format-spec.md  ql-format.md  storage.md  supported-types.md
src/: main.rs
src/core/: cli.rs  log.rs
src/db/: error.rs  format.rs
src/dbms/: error.rs  format.rs  mod.rs
src/dbms/format/: mod.rs
src/dbms/format/versions/: v1.rs  v2.rs  v3.rs
src/ql/parser/: column_type.rs  error.rs  mod.rs  statement.rs
src/ql/parser/expression/: binary_op.rs  error.rs  literal.rs  mod.rs  traits.rs  unary_op.rs
src/ql/parser/statements/: alter_stmt.rs  create_stmt.rs  delete_stmt.rs  drop_stmt.rs  insert_stmt.rs  load_stmt.rs  mod.rs  select_stmt.rs  update_stmt.rs  use_stmt.rs
src/ql/tokenizer/: errors.rs  mod.rs  token.rs  tokenizer.rs
src/row/: format.rs
src/table/: format.rs
src/util/: errors.rs  mod.rs
