[package]
name = "dbms_upended"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.103", features = ["backtrace"] }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
log = { version = "0.4.32", features = ["std"] }
env_logger = "0.11.10"
clap = { version = "4.6.1", features = ["env", "cargo", "derive"] }
tokio = { version = "1.52.3", features = ["full"] }
bitcode = { version = "0.6.9", features = ["serde"] }
serde = { version = "1.0.228", features = ["serde_derive", "alloc"] }
indexmap = { version = "2.14.0", features = ["serde"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3", "const_xxh3"] }
dialoguer = "0.12.0"

[profile.release]
debug = true
