[package]
name = "dbms_upended"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.104", features = ["backtrace"] }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.19"
clap = { version = "4.6.2", features = ["env", "cargo", "derive"] }
tokio = { version = "1.53.0", features = ["full"] }
bitcode = { version = "0.6.9", features = ["serde"] }
serde = { version = "1.0.229", features = ["serde_derive", "alloc"] }
indexmap = { version = "2.14.0", features = ["serde"] }
xxhash-rust = { version = "0.8.17", features = ["xxh3", "const_xxh3"] }
dialoguer = { version = "0.12.0", features = ["history", "completion"] }
clap_complete = "4.6.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "fmt",
    "std",
] }

[profile.release]
debug = true
lto = "fat"
